# dlexer

./: .gitignore  CMakeLists.txt  README.md  basic.cpp  common.cpp  regex.cpp  typed.cpp
include/dlexer/: basic.hpp  common.hpp  regex.hpp  typed.hpp
templates/regex/: post.c  prelude.c
test/: CMakeLists.txt  basictest.cpp  common.hpp  regextest.cpp  testmain.cpp  typedtest.cpp
